--- a/home.css
+++ b/home.css
@@ -2454,4 +2454,26 @@
     font-weight: 700;
     line-height: 24px;
   }
+  .circle-large.video-circle-large {
+    background-color: #fff;
+    margin-bottom: 0;
+    transition: transform .2s;
+    position: absolute;
+}
+
+.circle-large {
+    width: 96px;
+    height: 96px;
+    background-color: rgba(255, 255, 255, .1);
+    border-radius: 48px;
+    flex: none;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+    display: flex;
+}
+.w-inline-block {
+    max-width: 100%;
+    display: inline-block;
+}
 }
