--- a/home.css
+++ b/home.css
@@ -2450,4 +2450,12 @@
     font-weight: 700;
     line-height: 24px;
   }
+  .playVideo {
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+}
+
 }
