--- a/home.css
+++ b/home.css
@@ -1326,18 +1326,17 @@
   margin-right: var(--dl-space-space-sixunits);
 }
 .playpause {
-    background-image:url("https://static.thenounproject.com/png/3457061-200.png");
-    background-repeat:no-repeat;
-    width:20%;
-    height:20%;
-    position:absolute;
-    left:0%;
-    right:0%;
-    top:0%;
-    bottom:0%;
-    margin:auto;
-    background-size:contain;
+    background-image: url(https://static.thenounproject.com/png/3457061-200.png);
+    background-repeat: no-repeat;
+    width: 20%;
+    height: 20%;
+    position: absolute;
+    align-self: flex-start;
+    padding-top: var(--dl-space-space-sixunits);
+    margin-right: var(--dl-space-space-sixunits);
+    background-size: contain;
     background-position: center;
+    margin-top: var(--dl-space-space-sixunits);
 }
 .home-image4 {
   width: 735px;
