--- a/home.css
+++ b/home.css
@@ -9,7 +9,7 @@
   flex-shrink: 1;
   padding-top: var(--dl-space-space-twounits);
   padding-right: var(--dl-space-space-oneandhalfunits);
-  padding-bottom: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-fourunits);
 }
 .navbar-branding-logo {
   width: 32%;
