--- a/home.css
+++ b/home.css
@@ -1342,6 +1342,12 @@
   width: 735px;
   height: 627px;
 }
+.home-image7 {
+  width: auto;
+  height: 82px;
+  object-fit: cover;
+  padding-right: var(--dl-space-space-oneandhalfunits);
+}
 .home-video1 {
   flex: 1;
   width: auto;
