--- a/home.css
+++ b/home.css
@@ -1420,7 +1420,7 @@
   font-style: normal;
   font-family: Poppins;
   font-weight: 500;
-  padding-right: var(--dl-space-space-sixunits);
+  padding-right: var(--dl-space-space-unit);
 }
 .home-our-services {
   gap: var(--dl-space-space-fiveunits);
