--- a/home.css
+++ b/home.css
@@ -2471,7 +2471,14 @@
     padding-bottom: 100px;
   }
   .home-left {
-    gap: var(--dl-space-space-unit);
+    gap: var(--dl-space-space-oneandhalfunits);
+    width: 100%;
+    display: flex;
+    max-width: 100%;
+    align-items: flex-start;
+    padding-left: 38px;
+    flex-direction: column;
+    justify-content: center;
   }
   .home-testimonials {
     padding-top: var(--dl-space-space-fourunits);
