--- a/home.css
+++ b/home.css
@@ -1453,6 +1453,7 @@
   display: flex;
   max-width: 100%;
   align-items: flex-start;
+  padding-left: 38px;
   flex-direction: column;
   justify-content: center;
 }
