--- a/countdown.css
+++ b/countdown.css
@@ -17,20 +17,16 @@
   background-color: #12141d;
 }
 .countdown-bottomimage {
-  left: -5px;
-  width: 1366px;
-  bottom: -93px;
-  height: 436px;
+  width: auto;
+  bottom: -53px;
+  height: auto;
   position: absolute;
-  margin-bottom: 3px;
 }
 .countdown-bottomimage1 {
-  left: -7px;
-  width: 1860px;
+  width: auto;
   bottom: -14px;
-  height: 394px;
+  height: auto;
   position: absolute;
-  margin-bottom: 3px;
 }
 .countdown-topimage {
   top: 0px;
@@ -40,24 +36,23 @@
   position: absolute;
 }
 .countdown-rocket {
-  top: 150px;
+  top: 20%;
   left: 50%;
-  width: 607px;
-  height: 435px;
+  width: auto;
+  height: auto;
   position: absolute;
 }
 .countdown-group4 {
-  top: 283px;
-  left: 10%;
-  width: 494px;
-  height: 172px;
+  top: 27%;
+  left: 8%;
+  width: 100%;
+  height: 15%;
   display: flex;
   position: absolute;
   align-items: flex-start;
   flex-shrink: 1;
 }
 .countdown-text {
-  left: 4px;
   color: rgb(189, 68, 190);
   height: auto;
   position: absolute;
@@ -71,10 +66,10 @@
   text-decoration: none;
 }
 .countdown-group2 {
-  top: 73px;
+  top: 50%;
   left: 0px;
-  width: 494px;
-  height: 99px;
+  width: auto;
+  height: auto;
   display: flex;
   position: absolute;
   align-items: flex-start;
@@ -83,10 +78,10 @@
 .countdown-text2 {
   top: 20px;
   color: rgb(255, 255, 255);
-  width: 494px;
+  width: 500px;
   height: auto;
   position: absolute;
-  font-size: 72px;
+  font-size: 300%;
   font-style: Regular;
   text-align: left;
   font-family: Poppins;
@@ -96,11 +91,11 @@
   text-decoration: none;
 }
 .countdown-text3 {
-  left: 29px;
+  left: 20%;
   color: rgb(199, 199, 199);
   height: auto;
   position: absolute;
-  font-size: 14px;
+  font-size: 100%;
   font-style: Light;
   text-align: left;
   font-family: Poppins;
@@ -110,11 +105,11 @@
   text-decoration: none;
 }
 .countdown-text4 {
-  left: 150px;
+  left: 95px;
   color: rgb(199, 199, 199);
   height: auto;
   position: absolute;
-  font-size: 14px;
+  font-size: 100%;
   font-style: Light;
   text-align: left;
   font-family: Poppins;
@@ -124,11 +119,11 @@
   text-decoration: none;
 }
 .countdown-text5 {
-  left: 282px;
+  left: 186px;
   color: rgb(199, 199, 199);
   height: auto;
   position: absolute;
-  font-size: 14px;
+  font-size: 100%;
   font-style: Light;
   text-align: left;
   font-family: Poppins;
@@ -138,11 +133,11 @@
   text-decoration: none;
 }
 .countdown-text6 {
-  left: 413px;
+  left: 270px;
   color: rgb(199, 199, 199);
   height: auto;
   position: absolute;
-  font-size: 14px;
+  font-size: 100%;
   font-style: Light;
   text-align: left;
   font-family: Poppins;
