--- a/countdown.css
+++ b/countdown.css
@@ -8,7 +8,7 @@
 }
 .countdown-countdown {
   width: 100%;
-  height: 1028px;
+  height: 800px;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -31,8 +31,8 @@
 .countdown-topimage {
   top: 0px;
   left: 0px;
-  width: 1860px;
-  height: 133px;
+  width: auto;
+  height: auto;
   position: absolute;
 }
 .countdown-rocket {
