--- a/countdown.css
+++ b/countdown.css
@@ -8,7 +8,7 @@
 }
 .countdown-countdown {
   width: 100%;
-  height: 800px;
+  height: 900px;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -51,6 +51,7 @@
   position: absolute;
   align-items: flex-start;
   flex-shrink: 1;
+  top: 34%;
 }
 .countdown-text {
   color: rgb(189, 68, 190);
