--- a/countdown.css
+++ b/countdown.css
@@ -56,7 +56,7 @@
   color: rgb(189, 68, 190);
   height: auto;
   position: absolute;
-  font-size: 36px;
+  font-size: 270%;
   font-style: Bold;
   text-align: left;
   font-family: Poppins;
