--- a/countdown.css
+++ b/countdown.css
@@ -8,7 +8,7 @@
 }
 .countdown-countdown {
   width: 100%;
-  height: 900px;
+  height: 1028px;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -17,46 +17,44 @@
   background-color: #12141d;
 }
 .countdown-bottomimage {
-  width: auto;
-  bottom: -53px;
-  height: auto;
+  left: -5px;
+  width: 1366px;
+  bottom: -93px;
+  height: 436px;
   position: absolute;
+  margin-bottom: 3px;
 }
 .countdown-bottomimage1 {
-  width: auto;
+  left: -7px;
+  width: 1860px;
   bottom: -14px;
-  height: auto;
+  height: 394px;
   position: absolute;
+  margin-bottom: 3px;
 }
 .countdown-topimage {
   top: 0px;
   left: 0px;
-  width: auto;
-  height: auto;
-  position: absolute;
-}
-.countdown-rocket {
-  top: 20%;
-  left: 50%;
-  width: auto;
-  height: auto;
+  width: 1860px;
+  height: 133px;
   position: absolute;
 }
 .countdown-group4 {
-  top: 35%;
-  left: 8%;
-  width: 100%;
-  height: 15%;
+  top: 358px;
+  left: 681px;
+  width: 502px;
+  height: 255px;
   display: flex;
   position: absolute;
   align-items: flex-start;
   flex-shrink: 1;
 }
 .countdown-text {
+  left: 4px;
   color: rgb(189, 68, 190);
   height: auto;
   position: absolute;
-  font-size: 220%;
+  font-size: 250%;
   font-style: Bold;
   text-align: left;
   font-family: Poppins;
@@ -64,13 +62,12 @@
   line-height: normal;
   font-stretch: normal;
   text-decoration: none;
-  text-shadow: -1px 0 #12141d, 0 1px #12141d, 1px 0 #12141d, 0 -1px #12141d;
 }
 .countdown-group2 {
-  top: 50%;
+  top: 73px;
   left: 0px;
-  width: auto;
-  height: auto;
+  width: 494px;
+  height: 99px;
   display: flex;
   position: absolute;
   align-items: flex-start;
@@ -79,10 +76,10 @@
 .countdown-text2 {
   top: 20px;
   color: rgb(255, 255, 255);
-  width: 500px;
+  width: 494px;
   height: auto;
   position: absolute;
-  font-size: 300%;
+  font-size: 72px;
   font-style: Regular;
   text-align: left;
   font-family: Poppins;
@@ -92,7 +89,7 @@
   text-decoration: none;
 }
 .countdown-text3 {
-  left: 10px;
+  left: 29px;
   color: rgb(199, 199, 199);
   height: auto;
   position: absolute;
@@ -106,7 +103,7 @@
   text-decoration: none;
 }
 .countdown-text4 {
-  left: 97px;
+  left: 150px;
   color: rgb(199, 199, 199);
   height: auto;
   position: absolute;
@@ -120,7 +117,7 @@
   text-decoration: none;
 }
 .countdown-text5 {
-  left: 182px;
+  left: 282px;
   color: rgb(199, 199, 199);
   height: auto;
   position: absolute;
@@ -134,7 +131,7 @@
   text-decoration: none;
 }
 .countdown-text6 {
-  left: 270px;
+  left: 413px;
   color: rgb(199, 199, 199);
   height: auto;
   position: absolute;
