--- a/countdown.css
+++ b/countdown.css
@@ -8,7 +8,7 @@
 }
 .countdown-countdown {
   width: 100%;
-  height: 1028px;
+  height: 900px;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -17,26 +17,29 @@
   background-color: #12141d;
 }
 .countdown-bottomimage {
-  left: -5px;
-  width: 1366px;
-  bottom: -93px;
-  height: 436px;
+  width: auto;
+  bottom: -53px;
+  height: auto;
   position: absolute;
-  margin-bottom: 3px;
 }
 .countdown-bottomimage1 {
-  left: -7px;
-  width: 1860px;
+  width: auto;
   bottom: -14px;
-  height: 394px;
+  height: auto;
   position: absolute;
-  margin-bottom: 3px;
 }
 .countdown-topimage {
   top: 0px;
   left: 0px;
-  width: 1860px;
-  height: 133px;
+  width: auto;
+  height: auto;
+  position: absolute;
+}
+.countdown-rocket {
+  top: 20%;
+  left: 20%;
+  width: auto;
+  height: auto;
   position: absolute;
 }
 .countdown-group4 {
